fixed some layout bugs

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,40 +1,21 @@
-// Extra small devices (portrait phones, less than 576px)
-// No media query for `xs` since this is the default in Bootstrap
-
 // Small devices (landscape phones, 576px and up)
 @media (max-width: 576px) {
-  .footer-quote {
-    display: none;
-  }
-
   .copywrite {
-    font-size: 1rem;
+
   }
 }
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .copywrite {
-    text-indent: 30%;
-  }
-}
-
-//   @media (max-width: 850px) { 
-//     .toggler {
-//       color: whitesmoke;;
-//     }
-
-//  }
 
 // Medium devices (tablets, 768px and up)
-@media (max-width: 850px) {
-  .footer-quote {
-    display: none;
-  }
+@media (max-width: 850px) { }
 
+@media (max-width: 1200px) {
+  nav {
+    background-color: #121924 !important;
+  }
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) { 
+@media (min-width: 992px) {
   .quotes {
     font-size: 10rem !important;
   }
@@ -81,7 +62,6 @@ body {
 
 html,
 body {
-  // height: 100%;
   margin: 0;
   height: 100vh; //100% view height
   width: 100vw; // 100% view width
@@ -128,10 +108,6 @@ nav {
   position: fixed;
 }
 
-.star {
-  width: 1rem;
-}
-
 //right bar
 
 .bar-right {
@@ -147,3 +123,8 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
+.copywrite {
+  color: #138396;
+}
+
